--- a/.i3/config
+++ b/.i3/config
@@ -113,6 +113,11 @@ mode "resize" {
 	bindsym $up         resize shrink height 20 px or 10 ppt
 	bindsym $right      resize grow width 20 px or 10 ppt
 
+	bindsym Shift+$left       resize shrink width 100 px or 50 ppt
+	bindsym Shift+$down       resize grow height 100 px or 50 ppt
+	bindsym Shift+$up         resize shrink height 100 px or 50 ppt
+	bindsym Shift+$right      resize grow width 100 px or 50 ppt
+
 	bindsym Return mode "default"
 	bindsym Escape mode "default"
 }
