Alias Courier New to monospace

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -27,4 +27,10 @@
 			<family>FuraMono Nerd Font</family>
 		</prefer>
 	</alias>
+	<match>
+		<test name="family"><string>Courier New</string></test>
+		<edit name="family" mode="assign" binding="strong">
+			<string>FuraMono Nerd Font</string>
+		</edit>
+	</match>
 </fontconfig>
